--- a/src/index.html
+++ b/src/index.html
@@ -1,15 +1,18 @@
-<!doctype html>
-<html lang="en">
+ 
 <head>
-    <link href="https://fonts.googleapis.com/css?family=Orbitron" rel="stylesheet"> 
+  <link href="https://fonts.googleapis.com/css?family=Orbitron" rel="stylesheet">
   <meta charset="utf-8">
   <title>FinalFantasy</title>
   <base href="/">
 
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link rel="icon" type="image/x-icon" href="favicon.ico">
+  <link rel="icon" href="favicon.gif" type="image/gif">
 </head>
-<body>
-  <app-root></app-root>
+
+<body id="escapula">
+
+
+<app-root></app-root>
 </body>
-</html>
+
+ 
